Check HTML - dari HTML 9 sampai HTML 12

--- a/public html/10. Goa Gajah Ubud.html
+++ b/public html/10. Goa Gajah Ubud.html
@@ -3,45 +3,92 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Goa Gajah Ubud</title>
+    <title>Wisata Ubud Bali</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/todc-bootstrap-main/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/main-presentation.css">
+    <link href="test.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="classic">
+    <nav role="navigation" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+        </div>
+        <div id="presentation-chooser" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
+                <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
+                <li><a href="3. Pura Taman Saraswati.html">Pura Taman Saraswati</a></li>
+                <li><a href="4. Tari Kecak Ubud.html">Tari Kecak Ubud</a></li>
+                <li><a href="5. Lempad House.html">Lempad House</a></li>
+                <li><a href="6. Ayung Rafting.html">Ayung Rafting</a></li>
+                <li><a href="7. Sawah Terasering Ubud.html">Sawah Terasering Ubud</a></li>
+                <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
+                <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
+                <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+                <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
+                <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <article>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <h1>Goa Gajah Ubud</h1>
+      <section>
+        <h1>Goa Gajah Ubud</h1><img src="images/Goa Gajah - 1.jpg" height="300" width="600">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Obyek wisata Bali, tidak hanya dikenal dengan pantai dreamland yang mempesona, maupun menonton pertunjukan tari kecak di pura Uluwatu. Salah satu obyek wisata Bali menarik lainnya, yang ramai di kunjungi wisatawan saat berlibur di Bali adalah Goa Gajah di Ubud. Objek pariwisata ini, hampir setiap hari ramai mendapat kunjungan dari para wisatawan dan banyak penyedia jasa Bali tour murah, memasukan objek wisata ini dalam jadwal tour mereka.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/Goa Gajah - 1.jpg" class="big"></section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <h1>Goa Gajah Ubud</h1>
+      <section>
         <h2>Objek Wisata Di Bali Yang Patut Di Kunjungi</h2>
-      </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <p>Goa Gajah Ubud terletak di sebelah barat Desa Bedulu, Kecamatan Blahbatuh, Kabupaten Gianyar. Jaraknya sekitar 26 km dari kota Denpasar. Lokasi tepatnya adalah di tepi jurang dan merupakan pertemuan dari sungai kecil di desa tersebut.</p>
+      </section>
+      <section>
         <p>Diduga kata Goa Gajah berasal dari kata &quotLwa Gajah&quot, yang berarti wihara tempat pemujaan para Bhiksu umat beragama Budha. Pada lontar Negarakertagama yang disusun oleh Mpu Prapanca pada tahun 1365 M, terdapat nama tersebut. Sedangkan kata &quotLwa&quot berarti sungai. Maka disimpulkan menjadi pertapaan yang terletak di tepi sungai.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Dari areal parkir menuju Goa Gajah Ubud, wisatawan harus menuruni tangga menuju Goa Gajah Ubud. Tempat ini dikelilingi pepohonan hijau yang rindang, sehingga suasananya sangat sejuk dan asri</p>
+      </section>
+      <section>
         <p>Menurut petugas yang menjaga obyek wisata ini, pepohonan tersebut sudah berusia ratusan tahun. Komplek Goa Gajah di Ubud secara keseluruhan dapat dilihat dari tangga. Sesampai di bawah akan terdengar gemericik suara air yang mengalir dari pancuran arca. Bebatuan bekas bangunan yang dulunya hancur akibat gempa, juga ditemukan di sekitar pancuran. Sedangkan Goa Gajah Ubud sendiri, letaknya tidak jauh dari pancuran arca tersebut.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Pintu masuk melalui mulut goa hanya cukup untuk 1 orang. Diluarnya terdapat ukir &#45 ukiran dan 2 patung penjaga. Bagian dalam goa berbentuk huruf T, dengan tinggi sekitar 2 meter dan lebar 2 meter. Bagian kiri dan kanan lorong juga terdapat ceruk yang  mungkin pada jaman dahulu adalah tempat bertapa. Namun sekarang wisatawan dapat duduk maupun berbaring disana. Pada ujung barat lorong terdapat Arca Ganesha dan ujung timur lorong terdapat 3 lingga.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/Goa Gajah - 2.jpg" class="big"></section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Selain itu disekitar goa, juga terdapat patung petirtaan dengan tujuh patung widyadara &#45 widyadari yang sedang memegang air suci. Total patungnya ada tujuh, yang merupakan symbol dari tujuh sungai di India, tempat kelahiran agama Hindu dan Budha.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <Section>
+        <H3>Gambaran Goa Gajah</H3><img src="images/Goa Gajah - 2.jpg" height="300" width="600" class="big">
+      </Section>
+      <section>
         <h2>Cara Terbaik Ke Tempat Wisata Goa Gajah Di Bali</h2>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Jika anda memerlukan sarana transfortasi untuk menuju tempat wisata ini, anda dapat mengunakan jasa Bali sewa mobil murah yang kami sediakan untuk anda, baik dengan supir atau tanpa supir. Bagi anda yang menginginkan kemewahan dan kenyamanan dalam kendaraan, anda dapat menggunakan jasa sewa Alphard di Bali yang kami sediakan untuk anda.</p>
+      </section>
+      <section>
         <p>Jika anda menyukai tempat wisata <a href = "http://www.rentalmobilbali.net/goa-lawah/">Goa Gajah</a> di Bali, mungkin anda juga akan tertarik mengunjungi pura Goa Lawah. Jika anda memerlukan petunjuk arah untuk menuju lokasi dari Goa Gajah, silakan gunakan peta di Google Map dengan cara mengklik link ini Lihat Peta Lebih Besar.</p>
       </section>
     </article>
-    <script src="build/build.js"></script>
   </body>
+  <script src="build/build.js"></script>
+  <script src="bower_components/bespoke.js/dist/bespoke.min.js"></script>
+  <script src="bower_components/bespoke-bullets/dist/bespoke-bullets.min.js"></script>
+  <script src="bower_components/bespoke-scale/dist/bespoke-scale.min.js"></script>
+  <script src="bower_components/bespoke-hash/dist/bespoke-hash.min.js"></script>
+  <script src="bower_components/bespoke-progress/dist/bespoke-progress.min.js"></script>
+  <script src="bower_components/bespoke-state/dist/bespoke-state.min.js"></script>
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-bash.min.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/todc-bootstrap-main/dist/js/bootstrap.min.js"></script>
 </html>
