--- a/public html/8. Ubud Monkey Forest.html
+++ b/public html/8. Ubud Monkey Forest.html
@@ -41,7 +41,7 @@
     </nav>
     <article>
       <section>
-        <h1>Ubud Monkey Forest</h1>
+        <h1>Ubud Monkey Forest</h1><img src="images/ubudMKF2.jpg" height="300" width="600" class="big">
       </section>
       <section>
         <p>Ubud sangat terkenal sampai kemancanegara akan seni, alam dan budaya. Saat mendengar salah satu nama objek wisata di Bali, yaitu Ubud monkey forest. Walaupun belum pernah berlibur ke objek wisata ini, pasti tahu dari namanya, bahwa akan dapat melihat kera di salah satu objek wisata Ubud ini</p>
@@ -63,7 +63,6 @@
         <p>Jika ingin memasuki objek wisata monkey forest Ubud, akan dikenakan biaya tiket masuk sebesar Rp 20.000 per orang. Harga tiket masuk Ubud Monkey Forest Rp 20.000 per orang, khusus untuk wisatawan domestik. Untuk parkir mobil akan dikenakan biaya Rp 5.000 per mobil.</p>
         <p>Lihat disini, <a href = "http://www.rentalmobilbali.net/harga-tiket-masuk-wisata-di-bali/">Daftar Harga Tiket Masuk Objek Wisata Di Bali</a></p>
       </section>
-      <section><img src="images/ubudMKF2.jpg" height="300" width="600" class="big"></section>
       <section>
         <p>Di saat memasuki kawasan objek wisata monkey forest Bali, udara sejuk akan terasa, pepohonan hijau yang tinggi dan hijau, akan tampak dari areal parkir. Sebelum memasuki pintu masuk, disebelah kiri dari pintu masuk, akan terdapat loket tiket, di loket inilah wisatawan membayar tiket masuk. Di pintu masuk, wisatawan dapat melihat beberapa pedagang pisang yang dapat dibeli, jika ingin memberikan makan kera-kera. Jam buka dari tempat wisata mongkey forest di Ubud, dari jam 08:00 s/d 18:00 waktu Bali.</p>
       </section>
