--- a/public html/11. Gunung Kawi Bali.html
+++ b/public html/11. Gunung Kawi Bali.html
@@ -3,27 +3,76 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Gunung Kawi Bali</title>
+    <title>Wisata Ubud Bali</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/todc-bootstrap-main/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/main-presentation.css">
+    <link href="test.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="classic">
+    <nav role="navigation" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+        </div>
+        <div id="presentation-chooser" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
+                <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
+                <li><a href="3. Pura Taman Saraswati.html">Pura Taman Saraswati</a></li>
+                <li><a href="4. Tari Kecak Ubud.html">Tari Kecak Ubud</a></li>
+                <li><a href="5. Lempad House.html">Lempad House</a></li>
+                <li><a href="6. Ayung Rafting.html">Ayung Rafting</a></li>
+                <li><a href="7. Sawah Terasering Ubud.html">Sawah Terasering Ubud</a></li>
+                <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
+                <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
+                <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+                <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
+                <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <article>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <h1>Gunung Kawi Bali</h1><img src="images/Gunung-Kawi-Bali.jpg" width="450" class="big">
+      <section>
+        <h1>Gunung Kawi Bali</h1><img src="images/Gunung-Kawi-Bali.jpg" height="300" width="600" class="big">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h2>Sejarah Gunung Kawi Bali</h2>
+      </section>
+      <section>
         <p>Gunung Kawi merupakan salah satu cagar budaya dan objek wisata di Bali. Bangunan di Gunung Kawi Bali, merupakan bangunan candi yang di bangun pada abad ke 11. Lokasinya berada di didekat sungai Pakerisan, di wilayah Tampak Siring yang berada di timur laut tempat wisata Ubud.</p>
+      </section>
+      <section>
         <p>Di Gunung Kawi, terdapat candi yang dipahat di tebing batu di ketinggian 7 meter dengan jumlah 10 candi. Dulunya fungsi dari candi ini adalah tempat untuk pemujaan raja Udayana. Penafsiran akan fungsi candi ini, berdasarkan sebuah prasasti yang di temukan di tempat wisata ini.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Terdapat tiga kelompok candi di tempat wisata Gunung Kawi, yaitu kelompok candi Lima. Disebut candi lima, karena terdapat lima candi terpahat di tebing bagian timur dan kelima candi menghadap ke barat. Candi Lima didedikasikan untuk raja Udayana dan Anak Wungsu beserta keluarganya. Kelompok yang kedua bernama candi empat, letaknya di bagian barat dari tempat wisata Gunung Kawi. Candi empat didedikasikan untuk selir dari Anak Wungsu. Sedangkan di bagian barat daya terdapat 1 candi atau candi yang kesepuluh. Candi yang ke sepuluh ini di dedikasikan untuk perdana menteri yang menjabad pada pemeritahan Anak Wungsu.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h2>Wisata Tempat Purbakala Di Ubud</h2>
+      </section>
+      <section>
         <p>Pulau Bali memiliki banyak lokasi untuk wisata tempat purbakala, seperti Kerta Gosa Bali, Goa Gajah, pura Besakih Bali. Peminat terbanyak untuk wisata ke tempat purbakala adalah wisatawan asing. Karena itu banyak sekali tersedia jasa paket tour murah di Bali yang menawarkan rute wisata ke tempat purbakala. Salah satu contoh adalah paket tour Ubud. Jalan-jalan ke Bali tidak selalu mahal, untuk dapat jalan jalan murah ke Bali ada berbagai cara. Salah satunya adalah menggunakan jasa sewa mobil dengan supir di Bali. </p>
       </section>
     </article>
-    <script src="build/build.js"></script>
   </body>
+  <script src="build/build.js"></script>
+  <script src="bower_components/bespoke.js/dist/bespoke.min.js"></script>
+  <script src="bower_components/bespoke-bullets/dist/bespoke-bullets.min.js"></script>
+  <script src="bower_components/bespoke-scale/dist/bespoke-scale.min.js"></script>
+  <script src="bower_components/bespoke-hash/dist/bespoke-hash.min.js"></script>
+  <script src="bower_components/bespoke-progress/dist/bespoke-progress.min.js"></script>
+  <script src="bower_components/bespoke-state/dist/bespoke-state.min.js"></script>
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-bash.min.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/todc-bootstrap-main/dist/js/bootstrap.min.js"></script>
 </html>
