--- a/public html/9. Arma Museum Ubud.html
+++ b/public html/9. Arma Museum Ubud.html
@@ -3,52 +3,102 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Arma Museum Ubud</title>
+    <title>Wisata Ubud Bali</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/todc-bootstrap-main/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/main-presentation.css">
+    <link href="test.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="classic">
+    <nav role="navigation" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+        </div>
+        <div id="presentation-chooser" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
+                <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
+                <li><a href="3. Pura Taman Saraswati.html">Pura Taman Saraswati</a></li>
+                <li><a href="4. Tari Kecak Ubud.html">Tari Kecak Ubud</a></li>
+                <li><a href="5. Lempad House.html">Lempad House</a></li>
+                <li><a href="6. Ayung Rafting.html">Ayung Rafting</a></li>
+                <li><a href="7. Sawah Terasering Ubud.html">Sawah Terasering Ubud</a></li>
+                <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
+                <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
+                <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+                <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
+                <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <article>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <h1>Arma Musemum Ubud</h1><img src="images/amu1.jpg" width="500">
+      <section>
+        <h1>Arma Musemum Ubud</h1><img src="images/amu1.jpg" height="300" width="600">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
+      <section>
         <p>Liburan di Ubud Bali, sangat di minati oleh wisatawan domestik dan mancanegara. Karena tempat wisata di Ubud, banyak menawarkan aktivitas wisata yang sangat berbeda dengan tempat wisata lain. Begitu banyak hal yang dapat anda lakukan di tempat wisata Ubud.</p>
+      </section>
+      <section>
         <p>Menonton kesenian Bali, melihat pemandangan sawah terasering di Tegalalang Ubud dan aktivitas rafting di Ubud. Dihalaman ini, kami akan menuliskan informasi mengenai wisata kesenian di Bali dengan mengunjungi Arma museum Ubud.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/amu.jpg" width="500"></section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section><img src="images/amu.jpg" height="300" width="600"></section>
+      <section>
         <h2>Wisata Kesenian Di Bali</h2>
+      </section>
+      <section>
         <h3>Arma Museum Ubud</h3>
         <P>Disaat anda melakukan wisata di Bali dan memutuskan untuk berlibur di Ubud, tentunya anda tidak mau waktu liburan anda terbuang percuma. Bagi anda yang menyukai atau ingin tahu tentang kesenian Bali, museum seni Agung Rai atau yang lebih dikenal dengan nama Arma Museum Ubud, salah satu tempat wisata di Ubud yang harus anda kunjungi.</P>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Museum ini berada di pusat jantung pariwisata Ubud, tidak akan susah buat anda untuk mencari lokasi dari Arma Museum Ubud. Alamatnya berada di Jalan Pengosekan, Ubud, Gianyar, 80571, dengan nomer telphone (0361) 974228. Untuk mendapatkan petunjuk arah, silakan klik lini ini untuk melihat peta lokasi yang lebih besar. Lokasi museum Arma.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <Section>
         <h2>Hal Yang Menarik Di Museum Seni Agung Rai</h2>
+      </Section>
+      <Section>
         <p>Museum seni Agung Rai di bangun di lokasi yang kontur tanah naik turun, serta memiliki nuansa alam Ubud. Yang menjadi daya tarik terbaik dari museum Arma adalah design kebun bernuansa budaya Bali.</p>
-      </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <P>Banyak patung yang terdapat di museum ini, selain itu anda dapat melihat Lily Pound dan tanaman angrek yang tertata rapi. Kami tahu betul, tidak semua orang menyukai melihat lukisan atau melihat pameran seni.</P>
-        <p>Bagi anda yang menyukai nuansa kebun dengan design khas Bali dengan nuasa berbeda, maka tidak ada ruginya mengunjungi museum Agung Rai Ubud.</p>
+      </Section>
+      <section>
+        <p>Bagi anda yang menyukai nuansa kebun dengan design khas Bali dengan nuasa berbeda, maka tidak ada ruginya mengunjungi museum Agung Rai Ubud. Jika anda memutuskan untuk mengunjungi musem Arma, jangan lupa untuk membawa kamera. Begitu banyak hal yang dapat anda abadikan dengan foto di tempat wisata ini.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <P>Jika anda memutuskan untuk mengunjungi musem Arma, jangan lupa untuk membawa kamera. Begitu banyak hal yang dapat anda abadikan dengan foto di tempat wisata ini.</P>
-      </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h3>Biaya Tiket Masuk Ke Museum Arma Ubud & Jam Buka</h3>
+      </section>
+      <section>
         <p>Tiket masuk akan dikenakan sebesar Rp 50.000 jika anda mengunjungi museum Arma Ubud. Biaya tiket masuk sebesar 50 ribu rupiah, sudah termasuk minuman teh dan kopi yang anda dapat nikmati di salah satu cafe di museum ini. Jam buka dari museum Arma Ubud, dari jam 09:00 - jam 18:00 setiap hari, tentunya dengan waktu Bali.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <h3>Koleksi Lukisan Arma Museum Ubud</h3>
-        <P>Museum Arma Ubud, memiliki lukisan dari berbagai aliran seni lukis, seperti:</P>
-        <p>1.Lukisan Kamasan.</p>
-        <p>2.Lukisan Pre War.</p>
-        <p>3.Lukisan dari orang Eropa yang tinggal di Bali.</p>
-        <p>4.Lukisan dengan aliran modern traditional.</p>
-        <p>Untuk lebih jelas akan koleksi lukisan di museum Arma, anda dapat melihatnya di link di bawah.</p>
+      <section>
+        <ul>
+          <h3>Koleksi Lukisan Arma Museum Ubud</h3>
+          <P>Museum Arma Ubud, memiliki lukisan dari berbagai aliran seni lukis, seperti:</P>
+          <li></li>
+          <li>Lukisan Kamasan.</li>
+          <li>Lukisan Pre War.</li>
+          <li>Lukisan dari orang Eropa yang tinggal di Bali.</li>
+          <li>Lukisan dengan aliran modern traditional.</li>
+        </ul>
       </section>
     </article>
   </body>
   <script src="build/build.js"></script>
+  <script src="bower_components/bespoke.js/dist/bespoke.min.js"></script>
+  <script src="bower_components/bespoke-bullets/dist/bespoke-bullets.min.js"></script>
+  <script src="bower_components/bespoke-scale/dist/bespoke-scale.min.js"></script>
+  <script src="bower_components/bespoke-hash/dist/bespoke-hash.min.js"></script>
+  <script src="bower_components/bespoke-progress/dist/bespoke-progress.min.js"></script>
+  <script src="bower_components/bespoke-state/dist/bespoke-state.min.js"></script>
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-bash.min.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/todc-bootstrap-main/dist/js/bootstrap.min.js"></script>
 </html>
