Check HTML - mengedit 13-16

--- a/public html/15. Pura Gunung Lebah.html
+++ b/public html/15. Pura Gunung Lebah.html
@@ -3,53 +3,96 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Pura Gunung Lebah</title>
+    <title>Wisata Ubud Bali</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/todc-bootstrap-main/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/main-presentation.css">
+    <link href="test.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="classic">
+    <nav role="navigation" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+        </div>
+        <div id="presentation-chooser" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
+                <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
+                <li><a href="3. Pura Taman Saraswati.html">Pura Taman Saraswati</a></li>
+                <li><a href="4. Tari Kecak Ubud.html">Tari Kecak Ubud</a></li>
+                <li><a href="5. Lempad House.html">Lempad House</a></li>
+                <li><a href="6. Ayung Rafting.html">Ayung Rafting</a></li>
+                <li><a href="7. Sawah Terasering Ubud.html">Sawah Terasering Ubud</a></li>
+                <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
+                <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
+                <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+                <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
+                <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <article>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h1>Pura Gunung Lebah</h1><img src="images/PGL.jpg" height="250" width="600" class="big">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
+      <section>       
         <p>Keberadaan pura di Bali memiliki daya tarik bagi wisatawan karena keunikan, sejarah dan nilai religiusnya. Hal ini membuat pura menjadi salah satu tujuan wisatawan saat berlibur di Bali, selain tempat umat Hindu sembahyang. Wisatawan mancanegara dan wisatawan domestik selalu menjadwalkan liburan mereka saat di Bali untuk wisata ke pura. Salah satu pura yang ada di tempat wisata Ubud yang layak anda kunjungi saat di Bali adalah Pura Pura Gunung Lebah.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p>Lokasi dari pura Gunung Lebah berada di bawah jembatan dari sungai Campuhan Ubud. Melihat dari lokasinya yang berada di bawah Jembatan sungai Campuhan Ubud, termasuk lokasi pura yang berbeda dari biasanya. Tahukah anda, pura ini termasuk dalam kategori pura Kahyangan Jagat? Artinya semua umat Hindu dapat bersembahyang di pura Gunung Lebah.</p>
+      <section>
+        <p>Lokasi dari pura Gunung Lebah berada di bawah jembatan dari sungai Campuhan Ubud. Melihat dari lokasinya yang berada di bawah Jembatan sungai Campuhan Ubud, termasuk lokasi pura yang berbeda dari biasanya. Pura ini termasuk dalam kategori pura Kahyangan Jagat,yang artinya semua umat Hindu dapat bersembahyang di pura Gunung Lebah.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h3>Sejarah Pura Gunung Lebah Campuhan Ubud Bali</h3>
         <p> Asal usul pura Gunung Lebah dibangun pada abad ke 8 oleh seorang pendeta dari India. Pendeta ini bernama Rsi Markandeya, salah satu pendeta yang banyak mendirikan pura di Bali dan salah satunya pura terbesar di Bali, pura Besakih. Pendirian pura ini awal mulanya, Rsi Markandeya merasa adanya kekuatan magis dari lembah sungai Campuhan Ubud.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Karena adanya kekuatan magis di lembah sungai Campuhan, setelah beliau kembali dari perjalanan mendirikan pura di kaki Gunung Agung (pura Besakih). Beliau mendirikan pura di lembah sungai Campuhan, yang pada awalnya di gunakan sebagai tempat meditasi. Sejarah pura Gunung Lebah sangat terkait dengan nama desa wisata di Bali yang saat ini sangat terkenal ke mancanegara yaitu Ubud.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Awal terbentuknya desa Ubud dimulai dari didirikannya pemukiman penduduk di dekat pura Gunung Lebah. Karena di daerah sungai Campuhan banyak terdapat jenis tanaman yang dapat digunakan sebagai obat, Maka desa ini disebut Ubud yang berasal dari kata Ubad, artinya Obat.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h2>Asal Usul Nama Pura</h2>
         <p>Nama dari Pura Gunung Lebah, berasal dari gunung yang artinya bukit sedangkan lebah artinya lembah. Jadi arti nama dari pura ini adalah bukit kecil yang anda di lembah sungai Campuhan Ubud. Bukit kecil yang ada di lembah sungai Campuhan adalah pertemuan dua arus sungai, yaitu arus sungai Oos yang berasal dari kata Usada (bahasa halus Bali untuk obat) dan arus sungai Cerik (sungai kecil).</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Pura Gunung Lebah dikelilingi oleh pepohonan yang sangat rimbun dan suasananya sangat tenang, karena itu pura ini digunakan sebagai tempat meditasi. Suasana asri, indahnya arsitektur pura serta lokasinya dekat dengan tempat wisata di Ubud, maka pura ini sangat disukai wisatawan asing untuk berkunjung.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Dewa yang dipuja di Pura ini adalah Dewa Danuring Gunung Batur dan pura ini memiliki peran dalam penyelenggaraan upacara pemberisihan alam yang diadakan setiap 100 tahun. Setiap diadakannya upacara piodalan (upacara reguler) di pura ini, akan dipentaskan kesenian tari Calonarang pura Gunung Lebah. </p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/Pura-Gunung-Lebah-Bali.jpg"></section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section><img src="images/Pura-Gunung-Lebah-Bali.jpg" height="300" width="600"></section>
+      <section>
         <h2>Cara Terbaik Wisata Ke Pura Gunung Lebah &#45 Tempat Wisata Ubud</h2>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Saat anda wisata di Bali dan menginap di Ubud, maka menggunakan taksi salah satu cara terbaik untuk berkunjung ke pura ini. Lalu jika anda tidak menginap di Ubud saat wisata di Bali, maka menggunakan taksi bukanlah pilihan yang tepat. Karena biaya transfortasi akan menjadi mahal.</p>
         <p>Untuk wisata di Ubud, bagi yang tidak menginap di Ubud, menggunakan jasa sewa mobil + driver di Bali adalah cara terbaik. Karena driver anda akan menunggu dan anda tidak membayar berdasarkan argo tapi durasi pemakaian. Selain itu, anda tidak perlu memikirkan akan mencari tempat parkir.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Kelebihan lain mengunakan jasa sewa mobil plus sopir di Bali, selain biaya yang lebih murah serta durasi pemakaian yang lebih lama. Selama waktu penggunaan, anda dapat mengunjungi tempat wisata di Ubud yang lain, seperti Monkey Forest Ubud.</p>
         <p>Jika anda berencana untuk datang menggunakan kendaran sendiri, tentunya anda akan memerlukan peta pentunjuk arak untuk mencari lokasi dari pura ini. Klik disini untuk melihat peta lokasi dari Pura Gunung Lebah Campuhan.</p>
       </section>
     </article>
   </body>
   <script src="build/build.js"></script>
+  <script src="bower_components/bespoke.js/dist/bespoke.min.js"></script>
+  <script src="bower_components/bespoke-bullets/dist/bespoke-bullets.min.js"></script>
+  <script src="bower_components/bespoke-scale/dist/bespoke-scale.min.js"></script>
+  <script src="bower_components/bespoke-hash/dist/bespoke-hash.min.js"></script>
+  <script src="bower_components/bespoke-progress/dist/bespoke-progress.min.js"></script>
+  <script src="bower_components/bespoke-state/dist/bespoke-state.min.js"></script>
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-bash.min.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/todc-bootstrap-main/dist/js/bootstrap.min.js"></script>
 </html>
