--- a/public html/13. Tirta Sari Legong.html
+++ b/public html/13. Tirta Sari Legong.html
@@ -3,13 +3,45 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>tirta sari legong</title>
+    <title>Wisata Ubud Bali</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/todc-bootstrap-main/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/main-presentation.css">
+    <link href="test.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="classic">
+    <nav role="navigation" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+        </div>
+        <div id="presentation-chooser" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
+                <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
+                <li><a href="3. Pura Taman Saraswati.html">Pura Taman Saraswati</a></li>
+                <li><a href="4. Tari Kecak Ubud.html">Tari Kecak Ubud</a></li>
+                <li><a href="5. Lempad House.html">Lempad House</a></li>
+                <li><a href="6. Ayung Rafting.html">Ayung Rafting</a></li>
+                <li><a href="7. Sawah Terasering Ubud.html">Sawah Terasering Ubud</a></li>
+                <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
+                <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
+                <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+                <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
+                <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <article>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <h1>Tirta Sari Legong</h1><img src="images/TSL.jpg" width="400">
+        <h1>Tirta Sari Legong</h1><img src="images/TSL.jpg" height="300" width="600">
       </section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
         <p>Tempat wisata di Ubud Bali sangat terkenal sampai ke mancanegara, karena seni dan budayanya. Baik seni lukis, seni musik gambelan Bali dan seni tari Bali. Di Bali ada 3 jenis tari Bali yang menjadi favorit wisatawan saat berlibur. Seni tari tersebut antara lain, tari Barong, tari kecak dan tari Legong. Dihalaman ini, saya khusus menuliskan untuk pembaca, tentang seni tari Legong Tirtasari atau Tirta Sari Legong</p>
@@ -22,7 +54,7 @@
         <p> Grup tari Tirta Sari dibentuk pada tahun 1978 oleh Anak Agung Gde Mandera, yang berasal dari Puri Kaleran Peliatan Ubud. Tujuan awal dari Anak Agung Gde Mandera membentuk group tari Tirta Sari, adalah untuk melestarikan seni tari Bali dan seni musik klasik yang ada di Peliatan Ubud.</p>
       </section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p>Awal cerita terbentuknya gup tari Tirta Sari, saat Anak Agung Gde Mandera memanggil guru seniman musik klasik di daerah Peliatan Ubud, yang bernama I Made Lebah, untuk mementaskan pertunjukan tari Barong, pertunjukan tari Barong ini ini diberi nama Barong Bebekah</p>
+        <p>Awal cerita terbentuknya gup tari Tirta Sari, saat Anak Agung Gde Mandera memanggil guru seniman musik klasik di daerah Peliatan Ubud, yang bernama I Made Lebah, untuk mementaskan pertunjukan tari Barong, pertunjukan tari Barong ini ini diberi nama Barong Bebekah.</p>
       </section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <P>Lambat laun grup tari Tirta Sari mulai berkembang dengan menyempurnakan musik klasik khas Bali. Guruh Soekarno Putra pada tahun 1982, mengajak grup Tirta Sari untuk berkolaborasi dengan kelompok tari Swara Marhardika dan memadukan musik klasik Bali dengan musik kontemporer. Perpaduan antara kelompok tari Tirta Sari dengan kelompok tari Swara Marhardika,  dipentaskan pertama kali untuk upacara pembukaan Jakarta Fair.</P>
@@ -50,7 +82,7 @@
         <h2>Jadwal & Harga Tiket Pertunjukan Tirta Sari Legong</h2>
       </section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p class="bullet">Jika anda ingin menonton tari Tirta Sari Legong di Peliatan Ubud, mohon di catat, pertunjukan tari Tirta Sari Legong hanya di pentaskan pada hari Jumat. Jadi tidak setiap hari ada pertunjukan tari Tirta Sari Legong di Peliatan Ubud.</p>
+        <p class="bullet">Jika ingin menonton tari Tirta Sari Legong di Peliatan Ubud, mohon di catat, pertunjukan tari Tirta Sari Legong hanya di pentaskan pada hari Jumat. Jadi tidak setiap hari ada pertunjukan tari Tirta Sari Legong di Peliatan Ubud.</p>
         <ulcircle>
           <li>Setiap hari Jumat</li>
           <li>Jam 19:30 &#45 21:00</li>
@@ -84,12 +116,23 @@
         <p>Untuk menuju lokasi Balerung Stage Peliatan ada banyak cara yang dapat anda lakukan. Jika anda menginap di Ubud selama liburan di Bali, tentunya tidak akan susah untuk mencari lokasi Balerung Stage Peliatan. Menggunakan taksi adakah cara terbaik jika anda menginap di Ubud.</p>
       </section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p>Bagi yang menginap di kawasan <a href = "http://www.rentalmobilbali.net/tag/wisata-di-bali/">wisata di Bali</a> yang lain seperti <a href = "http://www.rentalmobilbali.net/tempat-wisata-di-bali-kuta/">objek wisata Kuta</a>, maka menggunakan taksi bukan pilihan yang tepat. Karena taksi menggunakan argo meter dan akan membuat budget transfortasi selama liburan menjadi mahal. Cara terbaik untuk menuju lokasi Balerung Stage Peliatan, jika anda menginap di Kuta adalah menggunakan jasa sewa mobil dengan sopir di Kuta Bali. Dengan menggunakan jasa sewa mobil + driver di Bali, anda dapat menyewa selama 10 jam dengan harga yang terjangkau. Selain itu supir akan menunggu anda sampai pertunjukan selesai. Jadi tidak perlu memikirkan saranan transfortasi Balik ke hotel.</p>
+        <p>Bagi yang menginap di kawasan wisata di Bali yang lain seperti objek wisata Kuta, maka menggunakan taksi bukan pilihan yang tepat. Karena taksi menggunakan argo meter dan akan membuat budget transfortasi selama liburan menjadi mahal. Cara terbaik untuk menuju lokasi Balerung Stage Peliatan, jika menginap di Kuta adalah menggunakan jasa sewa mobil dengan sopir di Kuta Bali. Dengan menggunakan jasa sewa mobil + driver di Bali, wisatawan dapat menyewa selama 10 jam dengan harga yang terjangkau. Selain itu supir akan menunggu sampai pertunjukan selesai. Jadi tidak perlu memikirkan saranan transfortasi Balik ke hotel.</p>
       </section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p>Selain itu, jika anda menggunakan sewa mobil plus sopir di Bali, selain menonton pertunjukan tari Legong Lasem Tirta Sari, anda juga dapat berwisata ke tempat wisata di Ubud yang lain, seperti monkey forest Ubud dan wisata kuliner ke restoran bebek Bengil Ubud.</p>
+        <p>Selain itu, jika menggunakan sewa mobil plus sopir di Bali, selain menonton pertunjukan tari Legong Lasem Tirta Sari, anda juga dapat berwisata ke tempat wisata di Ubud yang lain, seperti monkey forest Ubud dan wisata kuliner ke restoran bebek Bengil Ubud.</p>
       </section>
     </article>
   </body>
   <script src="build/build.js"></script>
+  <script src="bower_components/bespoke.js/dist/bespoke.min.js"></script>
+  <script src="bower_components/bespoke-bullets/dist/bespoke-bullets.min.js"></script>
+  <script src="bower_components/bespoke-scale/dist/bespoke-scale.min.js"></script>
+  <script src="bower_components/bespoke-hash/dist/bespoke-hash.min.js"></script>
+  <script src="bower_components/bespoke-progress/dist/bespoke-progress.min.js"></script>
+  <script src="bower_components/bespoke-state/dist/bespoke-state.min.js"></script>
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-bash.min.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/todc-bootstrap-main/dist/js/bootstrap.min.js"></script>
 </html>
