--- a/public html/14. Museum Puri Lukisan Ubud.html
+++ b/public html/14. Museum Puri Lukisan Ubud.html
@@ -3,10 +3,42 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Museum Puri Lukisan Ubud</title>
+    <title>Wisata Ubud Bali</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/todc-bootstrap-main/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/main-presentation.css">
+    <link href="test.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="classic">
+    <nav role="navigation" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+        </div>
+        <div id="presentation-chooser" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
+                <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
+                <li><a href="3. Pura Taman Saraswati.html">Pura Taman Saraswati</a></li>
+                <li><a href="4. Tari Kecak Ubud.html">Tari Kecak Ubud</a></li>
+                <li><a href="5. Lempad House.html">Lempad House</a></li>
+                <li><a href="6. Ayung Rafting.html">Ayung Rafting</a></li>
+                <li><a href="7. Sawah Terasering Ubud.html">Sawah Terasering Ubud</a></li>
+                <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
+                <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
+                <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+                <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
+                <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <article>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <h1>Museum Puri Lukisan Ubud</h1><img src="images/Museum-Puri-Lukisan-Ubud.jpg" height="250" width="600" class="big">
@@ -34,4 +66,15 @@
     </article>
   </body>
   <script src="build/build.js"></script>
+  <script src="bower_components/bespoke.js/dist/bespoke.min.js"></script>
+  <script src="bower_components/bespoke-bullets/dist/bespoke-bullets.min.js"></script>
+  <script src="bower_components/bespoke-scale/dist/bespoke-scale.min.js"></script>
+  <script src="bower_components/bespoke-hash/dist/bespoke-hash.min.js"></script>
+  <script src="bower_components/bespoke-progress/dist/bespoke-progress.min.js"></script>
+  <script src="bower_components/bespoke-state/dist/bespoke-state.min.js"></script>
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-bash.min.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/todc-bootstrap-main/dist/js/bootstrap.min.js"></script>
 </html>
