--- a/public html/16. Museum Neka Ubud Bali.html
+++ b/public html/16. Museum Neka Ubud Bali.html
@@ -3,64 +3,95 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Pura Gunung Lebah</title>
+    <title>Wisata Ubud Bali</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/todc-bootstrap-main/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/main-presentation.css">
+    <link href="test.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="classic">
+    <nav role="navigation" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+        </div>
+        <div id="presentation-chooser" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
+                <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
+                <li><a href="3. Pura Taman Saraswati.html">Pura Taman Saraswati</a></li>
+                <li><a href="4. Tari Kecak Ubud.html">Tari Kecak Ubud</a></li>
+                <li><a href="5. Lempad House.html">Lempad House</a></li>
+                <li><a href="6. Ayung Rafting.html">Ayung Rafting</a></li>
+                <li><a href="7. Sawah Terasering Ubud.html">Sawah Terasering Ubud</a></li>
+                <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
+                <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
+                <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+                <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
+                <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <article>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h1>Museum Neka Ubud Bali</h1><img src="images/museumneka2.jpg" height="250" width="600" class="big">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
+      <section>       
         <p>Aktivitas wisata Ubud Bali, sangat terkenal sampai ke mancanegara dan banyak hal menarik yang wisatawan, dapat lakukan di tempat wisata Ubud. Salah satu tempat menarik di Ubud Bali, yang banyak mendapat kunjungan dari wisatawan adalah Museum Neka Ubud Bali. Jika anda pernah mendengar pelukis terkenal Indonesia, yang bernama Affandi dan Bagong Kussudiardjo. Maka Museum Neka Ubud, salah satu tempat tempat wisata di Ubud Bali yang harus di kunjungi.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h3>Neka Art Museum Di Ubud</h3>
-        <p>Museum Neka Ubud Bali, lokasinya berada di Jalan Raya Campuhan, Kedewatan, Ubud. Jika anda ingin melihat lokasi museum Neka di peta, silakan klik link ini, peta lokasi museum Neka. </p>
-      </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Museum Neka Ubud Bali, lokasinya berada di Jalan Raya Campuhan, Kedewatan, Ubud</p>
         <p> Museum Neka Ubud Bali, dibuka pada tahun 1982. Nama Museum berasal dari nama seorang guru, yang memiliki kegemaran dalam mengkoleksi lukisan, nama guru tersebut adalah Suteja Neka.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p>Bangunan museum Neka Ubud Bali, memiliki arsitektur khas Bali dengan standar museum International. Selain bangunan museum Neka sangat terawat, cara menampilkan hasil seni lukis di museum Neka sangat terorganisir. Ini memudahkan pengunjung, untuk mengerti dan menikmati seni lukis. Setiap tahun, lukisan di museum Neka bertambah banyak dan saat ini ada lebih dari 300 lukisan, dari seniman mancanegara ataupun pelukis Indonesia. Mengasikan bukan untuk wisata di Bali anda?</p>
+      <section>
+        <p>Bangunan museum Neka Ubud Bali, memiliki arsitektur khas Bali dengan standar museum International. Selain bangunan museum Neka sangat terawat, cara menampilkan hasil seni lukis di museum Neka sangat terorganisir. Ini memudahkan pengunjung, untuk mengerti dan menikmati seni lukis. Setiap tahun, lukisan di museum Neka bertambah banyak dan saat ini ada lebih dari 300 lukisan, dari seniman mancanegara ataupun pelukis Indonesia. </p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/Museumneka.jpg" height="250" width="600" class="big"></section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section><img src="images/Museumneka.jpg" height="250" width="600" class="big"></section>
+      <section>
         <h3>Jam Buka Museum Dan Biaya Tiket Masuk</h3>
-        <p class="bullet">Tiket masuk akan dikenakan sebesar Rp 50.000, untuk orang dewasa dan anak-anak di bawah 12 tahun gratis. Untuk jam buka dapat anda lihat di bawah ini.</p>
+        <p class="bullet">Tiket masuk akan dikenakan sebesar Rp 50.000, untuk orang dewasa dan anak-anak di bawah 12 tahun gratis. Untuk jam buka dapat dilihat di bawah ini.</p>
         <ulcircle>
           <li>Senin-Sabtu 09:00 - 17.00</li>
           <li>Minggu 13:00 - 17.00</li>
           <li>Hari Libur National tutup</li>
         </ulcircle>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h2>Tempat Lukisan Pelukis Affandi</h2>
-      </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <p class="bullet">Museum Neka salah satu tempat di Bali untuk dapat melihat lukisan karya Affandi. Terdapat dua lukisan karya Affandi di museum Neka Ubud, yaitu:</p>
         <ol>
           <li>Lukisan Tari Barong & Rangda, tahun 1973. Dengan ukuran lukisan 100 x 185 cm.</li>
           <li>Lukisan Perahu Nelayan, tahun 1975. Dengan ukuran lukisan 103 x 129 cm.</li>
         </ol>
-      </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <p>Selain Affandi, museum Neka Ubud juga memamerkan lukisan dari pelukis Bagong Kussudiardjo, dengan judul lukisan Penari, dibuat pada tahun 1990, dengan ukuran lukisan 143 x 295 cm.</p>
-        <p>Sumber data dari, <a href = "http://www.museumneka.com/default.asp">Museum Neka</a>.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h2>Cara Terbaik Mengunjungi Museum Neka Ubud Bali</h2>
-      </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <p>Saat anda wisata di Ubud Bali, tentunya anda akan memerlukan sarana transfortasi untuk mengunjungi tempat wisata di Bali yang anda inginkan. Jika anda menginap di Ubud dan hanya ingin wisata ke satu tempat wisata di Ubud. Menggunakan taksi adalah cara terbaik. Banyak taksi yang tersedia di Ubud, jadi anda tidak akan kesusahan untuk mencari.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p>Jika anda tidak menginap di Ubud, cara terbaik untuk mengunjungi Museum Neka dan tempat wisata lain di Ubud adalah dengan menggunakan jasa sewa mobil dan driver di Bali. Kenapa kami sarankan anda menggunakan driver. Di Ubud, untuk mencari tempat parkir, tidaklah mudah. Terkadang anda harus parkir di pinggir jalan dan sangat susah untuk mendapatkan tempat parkir. Karena itu, kami sarankan anda menggunakan jasa rental mobil dan supir di Ubud Bali. Selain Museum Neka, Ubud juga memiliki museum lain yang layak untuk anda kunjungi. Nama museumnya adalah Arma museum Ubud.</p>
-      </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p>Jika anda tidak terlalu familiar akan tempat wisata di Ubud, kami sarakan anda untuk mencari paket Ubud Tour. Sebagain besar penyedia paket liburan di Bali, telah memasukkan biaya tiket masuk objek wisata dan makan siang. Dengan membeli paket tour ke Ubud, jadwal liburan anda terencana dan budget liburan sudah di ketahui dari awal.</p>
+      <section>
+        <p>Jika wisatawan tidak menginap di Ubud, cara terbaik untuk mengunjungi Museum Neka dan tempat wisata lain di Ubud adalah dengan menggunakan jasa sewa mobil dan driver di Bali. Di Ubud, untuk mencari tempat parkir, tidaklah mudah. Terkadang harus parkir di pinggir jalan dan sangat susah untuk mendapatkan tempat parkir. Karena itu, disarankan untuk  menggunakan jasa rental mobil dan supir di Ubud Bali. Selain Museum Neka, Ubud juga memiliki museum lain yang layak untuk anda kunjungi. Nama museumnya adalah Arma museum Ubud.</p>
       </section>
     </article>
   </body>
   <script src="build/build.js"></script>
+  <script src="bower_components/bespoke.js/dist/bespoke.min.js"></script>
+  <script src="bower_components/bespoke-bullets/dist/bespoke-bullets.min.js"></script>
+  <script src="bower_components/bespoke-scale/dist/bespoke-scale.min.js"></script>
+  <script src="bower_components/bespoke-hash/dist/bespoke-hash.min.js"></script>
+  <script src="bower_components/bespoke-progress/dist/bespoke-progress.min.js"></script>
+  <script src="bower_components/bespoke-state/dist/bespoke-state.min.js"></script>
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-bash.min.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/todc-bootstrap-main/dist/js/bootstrap.min.js"></script>
 </html>
